--- a/FrontWorld/MainWindow.xaml
+++ b/FrontWorld/MainWindow.xaml
@@ -7,6 +7,26 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="btn" Content="Click Here" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <StackPanel >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Cycles:" FontSize="24"></TextBlock>
+                    <TextBox x:Name="CyclesCount" Width="150"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Recharge:" FontSize="24"></TextBlock>
+                    <TextBox x:Name="RechargeCount" Width="150"/>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+        <StackPanel Grid.Row="1">
+            <Button x:Name="btn" Content="Click Here" />
+            <ProgressBar x:Name="progressBar" Height="15"/>
+        </StackPanel>
+        
     </Grid>
 </Window>
